# payment-service

./: .gitignore  pyproject.toml  requirements.txt
alembic/versions/: f96bbd3bfdd8_initial_schema.py
app/: main.py
app/models/: __init__.py  bank_payment.py  order.py  payment.py
app/repositories/: interfaces.py  memory.py
app/services/: bank_service.py  exceptions.py  payment_service.py
tests/: conftest.py
tests/api/: test_payments.py
tests/services/: test_acquiring.py  test_payment_creation.py  test_payment_deposit.py  test_payment_refund.py
